<resources>
    <string name="app_name">ChadMeetsStacey</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="login">Login</string>
    <string name="login_text">Login:</string>
    <string name="new_user">New User</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <!-- Strings related to find a date mode -->
    <string name="title_activity_find_adate_mode">FindADateMode</string>
    <string name="list_mode">List Mode</string>
    <string name="create_event">Create Event</string>
    <string name="my_ongoing_events">My Ongoing Events:</string>

    <!-- Strings related to list mode -->
    <string name="title_activity_list_mode">ListModeActivity</string>
    <string name="find_a_date_mode">Find A Date Mode</string>
    <string name="upcoming_events">Upcoming Events:</string>

    <!-- Strings related to new/edit/other event -->
    <string name="title_activity_new_event">NewEventActivity</string>
    <string name="title_activity_edit_event">EditEventActivity</string>
    <string name="title_activity_event_details">EventDetailsActivity</string>
    <string name="new_event">New Event:</string>
    <string name="edit_event">Edit Event:</string>
    <string name="event_name">Event Name:</string>
    <string name="date">Date:</string>
    <string name="time">Time:</string>
    <string name="location">Location:</string>
    <string name="description">Description:</string>
    <string name="submit_button">Submit</string>
    <string name="delete_button">Delete</string>

    <!-- Strings related to new user -->
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="new_user_heading">New User:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="confirm_password">Confirm Password:</string>
    <string name="first_name">First Name:</string>
    <string name="age">Age:</string>
    <string name="gender">Gender:</string>
    <string-array name="gender_array">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="grade">Grade:</string>
    <string name="greek_org">Greek Organization:</string>
    <string name="register_button">Register:</string>

    <!-- Strings related to matches -->
    <string name="title_activity_matches">MatchesActivity</string>
    <string name="my_events">My Events:"</string>
    <string name="other_events">Other Events:"</string>

    <!-- Strings related to messages -->
    <string name="title_activity_message">MessageActivity</string>
    <string name="new_message">New Message Description</string>
    <string name="send_message">Send Message</string>

    <!-- Strings related to profile -->
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="settings">Settings</string>
    <string name="bio">Biography goes here!</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>



</resources>
