<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditEventActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/new_event"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_event"
            android:textAlignment="center"
            android:textSize="36sp"
            android:paddingBottom="50dp"
            android:paddingTop="100dp"
            android:textStyle="bold|italic" />

        <include layout="@layout/content_event_details" />

         <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center" >

             <Button
                 android:id="@+id/submit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
                 android:text="@string/submit_button"
                 android:textColor="@color/backgroundColor"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:layout_marginRight="25dp"/>

             <Button
                 android:id="@+id/delete_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@color/colorAccent"
                 android:text="@string/delete_button"
                 android:textColor="@color/backgroundColor"
                 android:textSize="24sp"
                 android:textStyle="bold"
                 android:layout_marginLeft="25dp"/>
         </TableRow>

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>